# ethminer-sqrl

./: .gitignore  CMakeLists.txt
ethminer/: main.cpp
libapicore/: ApiServer.cpp
libethash-sqrl/: AutoTune.cpp  AutoTune.h  AutoTuner.cpp  AutoTuner.h  CMakeLists.txt  SQRLAXI.c  SQRLAXI.h  SQRLMiner.cpp  SQRLMiner.h
libethcore/: CMakeLists.txt  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
